AmicarDP/src/objects/et4ae5__AggregateLink__c.object
<CustomObject>
    <description>This object is used to store the Aggregate Level Link Details for each email send</description>
    <fields>
        <fullName>et4ae5__ExactTargetLinkID__c</fullName>
        <label>Marketing Cloud Link ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Last_Clicked__c</fullName>
        <inlineHelpText>La fecha y la hora cuando se hizo clic por última vez en este vínculo</inlineHelpText>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__LinkURL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfTotalClicks__c</fullName>
        <inlineHelpText>El número total de veces en el que se ha hecho clic en este vínculo</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfUniqueClicks__c</fullName>
        <inlineHelpText>El número total de clics únicos de este vínculo (único significa un clic por suscriptor)</inlineHelpText>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Definition</label>
        <referenceTo>et4ae5__SendDefinition__c</referenceTo>
        <relationshipLabel>Aggregate Link Level Details</relationshipLabel>
        <relationshipName>Aggregate_Link_Level_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggeredSendDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggered Send</label>
        <referenceTo>et4ae5__Automated_Send__c</referenceTo>
        <relationshipLabel>Aggregate Link Level Details</relationshipLabel>
        <relationshipName>Aggregate_Link_Level_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Unique_Link_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Link ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Aggregate Link Level Detail</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggregate Link Level Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>